traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:13: error: not found: value large
  if( getX() == large && getY() == hauteur){
                ^TraversalByColumn:13: error: not found: value hauteur
  if( getX() == large && getY() == hauteur){
                                   ^TraversalByColumn:21: error: not found: value hauteur
  if(getY() != hauteur){
               ^